<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.hunterand1.coderoutemaroc.StartExameActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="#ce0000"
            android:baselineAligned="false"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/textView3"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#fff" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:padding="5dp"
                android:id="@+id/imageView" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ha_start_exame"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:id="@+id/btnStartExame"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal|bottom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ha_desc_start_exame"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal|top"
                android:textAlignment="center"
                android:singleLine="false"
                android:longClickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textSerie"
                android:layout_gravity="center"
                android:textColor="#000" />

        </FrameLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_weight="0">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>
