<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.hunterand1.coderoutemaroc.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="#ce0000"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/headerSerie"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#fff"
                android:text="@string/app_name" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:padding="5dp"
                android:id="@+id/imageView" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="321dp"
                ads:srcCompat="@drawable/pause_hatchi"
                android:id="@+id/imageView4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ha_play"
                android:id="@+id/btnPlay"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/play"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="50dp" />

        </FrameLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_weight="0">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>
