<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_meun"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        tools:context="com.hunterand1.coderoutemaroc.MeunActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:paddingBottom="35dp"
                    ads:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/imageView6" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:drawable/btn_default"
                    android:onClick="startList"
                    android:clickable="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/ha_list"
                        android:layout_marginLeft="32dp"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:textSize="22sp"
                        android:id="@+id/tv1"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="8dp"
                        ads:srcCompat="@drawable/menu_btn"
                        android:id="@+id/iv1"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:drawable/btn_default"
                    android:clickable="true"
                    android:onClick="startRate"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/ha_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:textSize="22sp"
                        android:layout_marginLeft="32dp"
                        android:id="@+id/tv2"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="8dp"
                        ads:srcCompat="@drawable/star_btn"
                        android:id="@+id/iv2"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:background="@android:drawable/btn_default"
                    android:clickable="true"
                    android:onClick="startShare"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/ha_share"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:textSize="22sp"
                        android:layout_marginLeft="32dp"
                        android:id="@+id/tv3"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal" />

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:padding="8dp"
                        ads:srcCompat="@drawable/share_btn"
                        android:id="@+id/iv3"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_weight="0">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
</RelativeLayout>