<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.hunterand1.coderoutemaroc.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="#ce0000"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/headerSerie"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#fff" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:padding="5dp"
                android:id="@+id/imageView" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageQuestion"
                android:background="@drawable/c01_01"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView" />

        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:progress="0"
            android:max="10"
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/timeLine"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >



                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="2"
                    android:textOff="2"
                    android:id="@+id/btn2"
                    android:layout_weight="1" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="1"
                    android:textOff="1"
                    android:id="@+id/btn1"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="4"
                    android:textOff="4"
                    android:id="@+id/btn4"
                    android:layout_weight="1" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="3"
                    android:textOff="3"
                    android:id="@+id/btn3"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ha_done"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:drawablePadding="10dp"
                android:id="@+id/btnNext"
                android:drawableRight="@drawable/checkmark"
                android:layout_gravity="left|center_vertical" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:text="@string/ha_cancel"
                android:drawableRight="@drawable/close"
                android:drawablePadding="10dp"
                android:id="@+id/btnClear"
                android:layout_gravity="right|center_vertical" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ha_pause"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:drawablePadding="10dp"
                android:id="@+id/btnPause"
                android:drawableRight="@drawable/pause"
                android:layout_gravity="center" />

        </FrameLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_weight="0">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>
